--- a/pom.xml
+++ b/pom.xml
@@ -8,10 +8,45 @@
     <packaging>maven-plugin</packaging>
 
     <name>jfxmobile Maven Plugin</name>
+    <description>Maven plugin that allows users to compile and run JavaFX programs on mobile platforms</description>
     <url>https://github.com/messapix/jfxmobile-maven-plugin</url>
+    <inceptionYear>2015</inceptionYear>
+    
     <organization>
         <name>Messapix</name>
+        <url>http://www.messapix.com</url>
     </organization>
+    
+    <licenses>
+        <license>
+            <name>The Apache License, Version 2.0</name>
+            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
+        </license>
+    </licenses>
+    
+    <developers>
+        <developer>
+            <name>Alfio Gloria</name>
+            <organization>Messapix</organization>
+            <organizationUrl>http://www.messapix.com</organizationUrl>
+        </developer>
+    </developers>
+    
+    <scm>
+        <url>https://github.com/messapix/jfxmobile-maven-plugin</url>
+        <connection>scm:git:git://github.com/messapix/jfxmobile-maven-plugin.git</connection>
+    </scm>
+    
+    <distributionManagement>
+        <snapshotRepository>
+            <id>ossrh</id>
+            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
+        </snapshotRepository>
+        <repository>
+            <id>ossrh</id>
+            <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
+        </repository>
+    </distributionManagement>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -152,6 +187,49 @@
                         <id>process-test-classes</id>
                         <goals>
                             <goal>generate-test-metadata</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+            
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-source-plugin</artifactId>
+                <version>2.2.1</version>
+                <executions>
+                    <execution>
+                        <id>attach-sources</id>
+                        <goals>
+                            <goal>jar-no-fork</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+    
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-javadoc-plugin</artifactId>
+                <version>2.9.1</version>
+                <executions>
+                    <execution>
+                        <id>attach-javadocs</id>
+                        <goals>
+                            <goal>jar</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+            
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-gpg-plugin</artifactId>
+                <version>1.5</version>
+                <executions>
+                    <execution>
+                        <id>sign-artifacts</id>
+                        <phase>verify</phase>
+                        <goals>
+                            <goal>sign</goal>
                         </goals>
                     </execution>
                 </executions>
