--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>com.messapix.ftatr.jfxmobile</groupId>
     <artifactId>jfxmobile-maven-plugin</artifactId>
-    <version>1.0.0-b1</version>
+    <version>1.0.0-b2-SNAPSHOT</version>
     <packaging>maven-plugin</packaging>
 
     <name>jfxmobile Maven Plugin</name>
