--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>com.messapix.ftatr.jfxmobile</groupId>
     <artifactId>jfxmobile-maven-plugin</artifactId>
-    <version>1.0.0-b4-SNAPSHOT</version>
+    <version>1.0.0-b5-SNAPSHOT</version>
     <packaging>maven-plugin</packaging>
 
     <name>jfxmobile Maven Plugin</name>
@@ -154,6 +154,11 @@
             <artifactId>robovm-compiler</artifactId>
             <version>2.3.3</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.ant</groupId>
+            <artifactId>ant-jsch</artifactId>
+            <version>1.9.6</version>
+        </dependency>
     </dependencies>
     
     <build>
@@ -173,20 +178,6 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-plugin-plugin</artifactId>
                 <version>3.3</version>
-                
-                <configuration>
-                    <!-- see http://jira.codehaus.org/browse/MNG-5346 -->
-                    <skipErrorNoDescriptorsFound>true</skipErrorNoDescriptorsFound>
-                </configuration>
-
-                <executions>
-                    <execution>
-                        <id>mojo-descriptor</id>
-                        <goals>
-                            <goal>descriptor</goal>
-                        </goals>
-                    </execution>
-                </executions>
             </plugin>
             
             <plugin>
@@ -237,7 +228,7 @@
                 </executions>
             </plugin>
             
-            <!--plugin>
+            <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-gpg-plugin</artifactId>
                 <version>1.6</version>
@@ -250,7 +241,7 @@
                         </goals>
                     </execution>
                 </executions>
-            </plugin-->
+            </plugin>
             
             <plugin>
                 <groupId>org.sonatype.plugins</groupId>
