--- a/pom.xml
+++ b/pom.xml
@@ -150,9 +150,9 @@
             <version>2.7</version>
         </dependency>
         <dependency>
-            <groupId>com.mobidevelop.robovm</groupId>
+            <groupId>com.gluonhq</groupId>
             <artifactId>robovm-compiler</artifactId>
-            <version>2.3.3</version>
+            <version>2.3.1-ios11</version>
         </dependency>
         <dependency>
             <groupId>org.apache.ant</groupId>
